--- a/domace-api-server/src/main/resources/application.properties
+++ b/domace-api-server/src/main/resources/application.properties
@@ -10,8 +10,8 @@ config.services.path.pedido=http://localhost:9084/v1.0/
 user.oauth.clientId=srJJRR
 user.oauth.clientSecret=9012134$#@!
 user.oauth.redirectUris=http://localhost:9081/login
-user.oauth.user.username=srJJ
-user.oauth.user.password=soloJJ+13
+user.oauth.user.username=user
+user.oauth.user.password=prueba
 user.oauth.accessTokenValidity=300
 user.oauth.refreshTokenValidity=240000
 
